# pytorch_cifar10_pipeline

./: .gitignore  README.md  dvc.yaml  main.py  pyproject.toml
configs/: exp1.yaml  exp2.yaml  exp3.yaml
dl/: cifar10.dvc
src/k2/: dataset.py  eval.py  model.py  train.py
