[project]
name = "lab2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.66.1",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
